[package]
name = "sch"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcode = { version = "0.6.3", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking"] }
ring = "0.17.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
souvenir = "0.1.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
