[package]
name = "sch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
bitcode = { version = "0.6.7", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["blocking"] }
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
souvenir = { version = "0.5.5", features = ["sqlx", "postgres"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
tokio = { version = "1.47.1", features = ["full"] }
